salesforce-main/src/main/default/objects/Hub_Account__c/Hub_Account__c.object-meta.xml
<CustomObject>
    <description>Hub accounts associated with the student account</description>
    <label>Hub Account</label>
    <nameField>
        <displayFormat>HUB-{0000000}</displayFormat>
        <label>Hub Account Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hub Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>