salesforce-main/src/main/default/objects/Hub_Account__c/fields/Auth0_Id__c.field-meta.xml
<CustomField>
    <fullName>Auth0_Id__c</fullName>
    <externalId>true</externalId>
    <label>Auth0 Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>