salesforce-main/src/main/default/objects/Hub_Account__c/fields/BPP_Requested_Hub_Username__c.field-meta.xml
<CustomField>
    <fullName>BPP_Requested_Hub_Username__c</fullName>
    <label>Requested Hub Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>