salesforce-main/src/main/default/objects/Hub_Account__c/fields/BPP_Username_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>BPP_Username_Error_Message__c</fullName>
    <label>Username Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>