salesforce-main/src/main/default/objects/Hub_Account__c/fields/BPP_Username_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>BPP_Username_Update_Status__c</fullName>
    <description>Tracks the progress of the active Hub Username update request.</description>
    <inlineHelpText>Tracks the progress of the active Hub Username update request.</inlineHelpText>
    <label>Username Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>