salesforce-main/src/main/default/objects/Hub_Account__c/fields/Email_Verified_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified_Indicator__c</fullName>
    <description>Green tick if Hub email has been verified</description>
    <formula>IF( Email_Verified__c = TRUE,
IMAGE( &quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;Email Verified&quot;),
NULL)</formula>
    <label>Email Verified</label>
    <type>Text</type>
</CustomField>