salesforce-main/src/main/default/objects/Hub_Account__c/fields/Hub_Username__c.field-meta.xml
<CustomField>
    <fullName>Hub_Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email address registered as the Hub username</description>
    <inlineHelpText>Email address</inlineHelpText>
    <label>Hub Username</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>