salesforce-main/src/main/default/objects/Hub_Account__c/fields/Last_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Last_Logged_In__c</fullName>
    <description>Last time Hub account was logged in to.</description>
    <label>Last Logged In</label>
    <type>DateTime</type>
</CustomField>