salesforce-main/src/main/default/objects/Hub_Account__c/fields/Last_Password_Reset_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Password_Reset_Email_Sent__c</fullName>
    <description>Shows the date and time that the last password reset email was sent to this Hub Account.</description>
    <inlineHelpText>Shows the date and time that the last password reset email was sent to this Hub Account.</inlineHelpText>
    <label>Last Password Reset Email Sent</label>
    <type>DateTime</type>
</CustomField>