salesforce-main/src/main/default/objects/Hub_Account__c/fields/Login_Count__c.field-meta.xml
<CustomField>
    <fullName>Login_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times Hub account has been logged into</description>
    <label>Login Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>