salesforce-main/src/main/default/objects/Hub_Account__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Student Account associated with the Hub Account</description>
    <label>Student</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Hub account record has not been associated with a student</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hub Accounts</relationshipLabel>
    <relationshipName>Hub_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>