salesforce-main/src/main/default/objects/Hub_Account__c/validationRules/Auth0Id_required_for_Hub_Username_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Auth0Id_required_for_Hub_Username_Update</fullName>
    <active>true</active>
    <description>An &apos;Auth0 Id&apos; value is required in order for the &apos;Hub Username&apos; to be updated</description>
    <errorConditionFormula>AND(
				ISCHANGED(BPP_Requested_Hub_Username__c),
				ISBLANK(Auth0_Id__c) 
)</errorConditionFormula>
    <errorDisplayField>Auth0_Id__c</errorDisplayField>
    <errorMessage>An &apos;Auth0 Id&apos; value is required in order for a &apos;Hub Username&apos; to be updated</errorMessage>
</ValidationRule>