salesforce-main/src/main/default/objects/Hub_Account__c/validationRules/Hub_Username_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Hub_Username_Required</fullName>
    <active>true</active>
    <description>Hub record must have a valid Hub Username</description>
    <errorConditionFormula>ISBLANK( Hub_Username__c )</errorConditionFormula>
    <errorDisplayField>Hub_Username__c</errorDisplayField>
    <errorMessage>Hub Username is missing. Please add a Hub Username to continue.</errorMessage>
</ValidationRule>