salesforce-main/src/main/default/objects/Hub_Account__c/validationRules/Prevent_BPP_Username_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_BPP_Username_Change</fullName>
    <active>true</active>
    <description>Prevents a User from changing a Hub username to an email address that contains &quot;my.bpp.com&quot;.</description>
    <errorConditionFormula>CONTAINS(BPP_Requested_Hub_Username__c, &quot;my.bpp.com&quot;)</errorConditionFormula>
    <errorDisplayField>BPP_Requested_Hub_Username__c</errorDisplayField>
    <errorMessage>Unable to change a Hub Username to an email address that contains &quot;my.bpp.com&quot;.</errorMessage>
</ValidationRule>