salesforce-main/src/main/default/objects/Hub_Account__c/validationRules/Requested_Username_Matches_Existing.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_Username_Matches_Existing</fullName>
    <active>true</active>
    <description>Prevents users from entering a Requested Hub Username that matches the existing Hub Username.</description>
    <errorConditionFormula>BPP_Requested_Hub_Username__c = Hub_Username__c</errorConditionFormula>
    <errorDisplayField>BPP_Requested_Hub_Username__c</errorDisplayField>
    <errorMessage>The Requested Hub Username must not be the same value as the existing Hub Username.</errorMessage>
</ValidationRule>